src/snapshots/venial__tests__parse_unit_struct_empty_where_clause.snap
---
source: src/tests.rs
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        tk_struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: Some(
            [],
        ),
        fields: Unit,
        tk_semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
