src/snapshots/venial__tests__parse_unit_struct_generic_params.snap
---
source: src/tests.rs
assertion_line: 432
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        _struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: Some(
            [
                GenericParam {
                    name: "X",
                    bound: None,
                },
                GenericParam {
                    name: "Y",
                    bound: Some(
                        [
                            Z,
                            "<",
                            A,
                            ">",
                        ],
                    ),
                },
                GenericParam {
                    name: "Z",
                    bound: None,
                },
            ],
        ),
        where_clause: None,
        fields: Unit,
        _semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
