src/snapshots/venial__tests__parse_unit_struct_vis-2.snap
---
source: src/tests.rs
assertion_line: 97
expression: struct_type_pub_crate
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub(
                "crate",
            ),
        ),
        name: "Hello",
        fields: Unit,
    },
)
