src/snapshots/venial__tests__parse_unit_struct_vis-3.snap
---
source: src/tests.rs
assertion_line: 98
expression: struct_type_crate
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            crate,
        ),
        name: "Hello",
        fields: Unit,
    },
)
