src/snapshots/venial__tests__parse_unit_struct_vis.snap
---
source: src/tests.rs
assertion_line: 99
expression: struct_type_pub
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: "Hello",
        generic_params: None,
        where_clauses: None,
        fields: Unit,
    },
)
