src/snapshots/venial__tests__parse_unit_struct_where_clause.snap
---
source: src/tests.rs
assertion_line: 337
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        tk_struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: Some(
            [
                [
                    A,
                    ":",
                    B,
                ],
                [
                    C,
                    "<",
                    D,
                    ">",
                    ":",
                    E,
                    "<",
                    F,
                    ">",
                ],
            ],
        ),
        fields: Unit,
        tk_semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
