src/snapshots/venial__tests__parse_unsafe_fn.snap
---
source: src/tests.rs
assertion_line: 644
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: Some(
                Ident(
                    unsafe,
                ),
            ),
            tk_extern: None,
            extern_abi: None,
        },
        name: Ident(
            unsafe_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    f32,
                ],
            },
        ],
        where_clause: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
