src/snapshots/venial__tests__parse_unsafe_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: Ident(
            unsafe_fn,
        ),
        generic_params: None,
        where_clauses: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        returns: None,
        abi: "Rust",
        is_unsafe: true,
        is_async: false,
        is_const: false,
    },
)
