src/snapshots/venial__tests__parse_visi_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: Ident(
            visibility,
        ),
        generic_params: None,
        where_clauses: None,
        params: [
            FunctionParameter {
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        returns: None,
    },
)
