src/snapshots/venial__tests__parse_where_fn-2.snap
---
source: src/tests.rs
expression: func_2
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        qualifiers: FunctionQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: None,
            tk_extern: None,
            extern_abi: None,
        },
        name: Ident(
            where_clause,
        ),
        generic_params: Some(
            [
                GenericParam {
                    name: "T",
                    bound: None,
                },
            ],
        ),
        tk_params_parens: (),
        params: [],
        where_clause: Some(
            [
                [
                    T,
                    ":",
                    Debug,
                ],
            ],
        ),
        tk_return_arrow: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
