src/snapshots/venial__tests__parse_where_fn.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        qualifiers: FunctionQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: None,
            tk_extern: None,
            extern_abi: None,
        },
        name: Ident(
            where_clause,
        ),
        generic_params: Some(
            [
                GenericParam {
                    name: "T",
                    bound: None,
                },
            ],
        ),
        tk_params_parens: (),
        params: [],
        where_clause: Some(
            [
                [
                    T,
                    ":",
                    Debug,
                ],
            ],
        ),
        tk_return_arrow: Some(
            [
                Punct {
                    char: '-',
                    spacing: Joint,
                },
                Punct {
                    char: '>',
                    spacing: Alone,
                },
            ],
        ),
        return_ty: Some(
            [
                T,
            ],
        ),
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
